--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,6 +1,6 @@
 {
   "prefix": "$",
-  "token": "1234",
-  "ownerId": "4321",
+  "token": "NTM4MzYxMzA5NDk0OTAyNzk0.XEsaCg.scE8UWjKAkmBivDtjbqbFLTVsdA",
+  "ownerId": "262610764597166081",
   "caseSensitive": false
 }
