--- a/package.json
+++ b/package.json
@@ -20,12 +20,27 @@
   },
   "homepage": "https://github.com/Artheanos/Simple-JS-Discord-Bot#readme",
   "dependencies": {
+    "@types/jest": "^26.0.15",
     "bent": "^7.3.12",
-    "discord.js": "^12.4.1"
+    "discord.js": "^12.4.1",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
     "@types/ws": "^7.4.0",
     "typescript": "^4.0.5"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/tests/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
