--- a/src/config/config.json
+++ b/src/config/config.json
@@ -2,5 +2,6 @@
   "prefix": "$",
   "token": "1234",
   "ownerId": "4321",
-  "caseSensitive": false
+  "caseSensitive": false,
+  "unknownCommandMessage": true
 }
