--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "watch": "node_modules/.bin/tsc -w",
     "build": "node_modules/.bin/tsc",
-    "start": "node dist/bot/app.js",
-    "build-start": "npm run build && npm run start"
+    "start": "node dist/src/app.js",
+    "build-start": "yarn run build && yarn run start"
   },
   "repository": {
     "type": "git",
@@ -20,16 +20,22 @@
   },
   "homepage": "https://github.com/Artheanos/Simple-JS-Discord-Bot#readme",
   "dependencies": {
-    "@types/jest": "^26.0.15",
     "bent": "^7.3.12",
-    "discord.js": "^12.4.1",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.4.4"
+    "discord.js": "^13.5.1",
+    "module-alias": "^2.2.2"
   },
   "devDependencies": {
-    "@types/node": "^14.14.7",
-    "@types/ws": "^7.4.0",
-    "typescript": "^4.0.5"
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.8",
+    "@types/ws": "^8.2.2",
+    "jest": "^27.4.7",
+    "ts-jest": "^27.1.2",
+    "typescript": "^4.5.4",
+    "yarn-upgrade-all": "^0.6.1"
+  },
+  "_moduleAliases": {
+    "config": "dist/config",
+    "interfaces": "dist/src/interfaces"
   },
   "jest": {
     "testEnvironment": "node",
@@ -41,6 +47,10 @@
       "ts",
       "tsx",
       "js"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "./"
     ]
   }
 }
