Enable playing youtube videos

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/Artheanos/Simple-JS-Discord-Bot#readme",
   "dependencies": {
+    "@discordjs/voice": "^0.7.5",
     "bent": "^7.3.12",
     "discord.js": "^13.5.1",
+    "libsodium-wrappers": "^0.7.9",
     "module-alias": "^2.2.2"
   },
   "devDependencies": {
