--- a/config/config_example.json
+++ b/config/config_example.json
@@ -1,6 +1,7 @@
 {
   "prefix": "$",
   "token": "1234",
+  "youtubeApiToken": "",
   "ownerId": "4321",
   "caseSensitive": false,
   "unknownCommandMessage": true,
