--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,8 +52,8 @@
       "config": [
         "./config"
       ],
-      "interfaces/*": [
-        "./src/interfaces/*"
+      "*": [
+        "./src/*"
       ]
     },
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
