--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "node_modules/.bin/tsc",
+    "build-start": "yarn run build && yarn run start",
+    "lint": "eslint src/**/*.[tj]s",
     "start": "node dist/src/app.js",
-    "build-start": "yarn run build && yarn run start"
+    "types": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,8 @@
     "axios": "^0.24.0",
     "bent": "^7.3.12",
     "discord.js": "^13.5.1",
+    "eslint": "^8.30.0",
+    "eslint-plugin-jest": "^27.1.7",
     "libsodium-wrappers": "^0.7.9",
     "module-alias": "^2.2.2"
   },
@@ -31,15 +35,19 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
     "@types/ws": "^8.2.2",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
     "jest": "^27.4.7",
     "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4",
+    "typescript": "^4.9.4",
     "yarn-upgrade-all": "^0.6.1"
   },
   "_moduleAliases": {
     "config": "dist/config"
   },
-  "_moduleDirectories": ["dist/src"],
+  "_moduleDirectories": [
+    "dist/src"
+  ],
   "jest": {
     "testEnvironment": "node",
     "transform": {
@@ -51,5 +59,6 @@
       "tsx",
       "js"
     ]
-  }
+  },
+  "eslintIgnore": ["node_modules"]
 }
