--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.7.0",
     "@discordjs/voice": "^0.7.5",
+    "@prisma/client": "4.8.0",
     "axios": "^0.24.0",
     "bent": "^7.3.12",
     "discord.js": "^13.5.1",
@@ -33,11 +34,12 @@
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.8",
+    "@types/node": "^18.11.18",
     "@types/ws": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "jest": "^27.4.7",
+    "prisma": "^4.8.0",
     "ts-jest": "^27.1.2",
     "typescript": "^4.9.4",
     "yarn-upgrade-all": "^0.6.1"
@@ -59,7 +61,13 @@
       "tsx",
       "js"
     ],
-    "moduleDirectories": ["node_modules", "src", "config"]
+    "moduleDirectories": [
+      "node_modules",
+      "src",
+      "config"
+    ]
   },
-  "eslintIgnore": ["node_modules"]
+  "eslintIgnore": [
+    "node_modules"
+  ]
 }
