--- a/package.json
+++ b/package.json
@@ -22,27 +22,26 @@
   "homepage": "https://github.com/Artheanos/Simple-JS-Discord-Bot#readme",
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.14.0",
-    "@prisma/client": "4.8.0",
-    "axios": "^1.2.2",
+    "@discordjs/voice": "^0.16.1",
+    "@prisma/client": "^5.7.1",
+    "axios": "^1.6.2",
     "bent": "^7.3.12",
-    "discord.js": "^14.7.1",
-    "eslint": "^8.31.0",
-    "eslint-plugin-jest": "^27.2.1",
-    "libsodium-wrappers": "^0.7.9",
-    "module-alias": "^2.2.2"
+    "discord.js": "^14.14.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-jest": "^27.6.0",
+    "libsodium-wrappers": "^0.7.13",
+    "module-alias": "^2.2.3"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/node": "^18.11.18",
-    "@types/ws": "^8.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "@typescript-eslint/parser": "^5.47.0",
-    "jest": "^29.3.1",
-    "prisma": "^4.8.0",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.9.4",
-    "yarn-upgrade-all": "^0.6.1"
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.5",
+    "@types/ws": "^8.5.10",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "jest": "^29.7.0",
+    "prisma": "^5.7.1",
+    "typescript": "^5.3.3",
+    "yarn-upgrade-all": "^0.7.2"
   },
   "_moduleAliases": {
     "config": "dist/config"
