--- a/package.json
+++ b/package.json
@@ -23,15 +23,13 @@
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.1",
-    "@prisma/client": "^5.7.1",
-    "axios": "^1.6.2",
-    "discord.js": "^14.14.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-jest": "^27.6.0",
-    "libsodium-wrappers": "^0.7.13",
+    "@prisma/client": "^5.20.0",
+    "axios": "^1.7.7",
+    "discord.js": "^14.16.2",
+    "libsodium-wrappers": "^0.7.15",
     "module-alias": "^2.2.3",
     "node-cron": "^3.0.3",
-    "ts-jest": "^29.1.1"
+    "prisma": "^5.20.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
@@ -40,10 +38,11 @@
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-jest": "^28.8.3",
     "jest": "^29.7.0",
-    "prisma": "^5.7.1",
-    "typescript": "^5.3.3",
-    "yarn-upgrade-all": "^0.7.2"
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.3.3"
   },
   "_moduleAliases": {
     "config": "dist/config"
@@ -56,7 +55,7 @@
     "transform": {
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
-    "testRegex": "(/tests/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testRegex": "(/test/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": [
       "ts",
       "tsx",
