--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build-start": "npm run build && npm run start",
     "lint": "eslint src/**/*.[tj]s",
     "start": "node dist/src/initializers/app.js",
-    "types": "tsc --noEmit"
+    "types": "tsc --noEmit",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -53,9 +54,9 @@
   "jest": {
     "testEnvironment": "node",
     "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      ".(ts|tsx)": "ts-jest"
     },
-    "testRegex": "(/test/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testRegex": "(/test/.*\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": [
       "ts",
       "tsx",
